--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           </div>
         </div>
         <aside class="card">
-          <div class="profile-square">UK</div>
+          <div class="profile-square"><img src="IMG_20250828_123128.jpg" alt="My Image" width="400"></div>
           <div class="info-grid">
             <div><b>Email:</b><br/>umeshkhetra9111@gmail.com</div>
             <div><b>Phone:</b><br/>+91 6263310902</div>
